6671 - Modification in notification log screen

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
@@ -4,7 +4,7 @@
 	<h2 class="need-header" [hidden]="hasHeader">{{component_header | translate}}</h2>	<form #f_npss_notification_log_srch="ngForm">
 <div id="RN01" class="row">
 	<div #npss_notification_log_srch_memory12 id="RN01CN1" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory12')" >
-				<dtp [ctrl_id]="'npss_notification_log_srch_memory12'" [comp_id]="comp_id" [ctrl]="ctrl.memory12" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></dtp>
+				<cdn_date [ctrl_id]="'npss_notification_log_srch_memory12'" [comp_id]="comp_id" [ctrl]="ctrl.memory12" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 </div>
 <div id="RN11" class="row">
