--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_notification_logs/f_npss_notification_log_srch/f_npss_notification_log_srch.component.html
@@ -9,7 +9,7 @@
 </div>
 <div id="RN11" class="row">
 	<div  id="RN21CN3" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('channel_id')" >
-				<txt [ctrl_id]="'npss_notification_log_srch_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cdn_ctrl [ctrl_id]="'npss_notification_log_srch_channel_id'" [comp_id]="comp_id" [ctrl]="ctrl.channel_id" [model]="screen_instance[this.comp_id].f_npss_notification_log_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 <div id="RN21" class="row">
