--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_view_transaction/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_view_transaction/p_main_layout/p_main_layout.component.html
@@ -24,20 +24,6 @@
 	</div>
 </div>
 	</div>
-	<div id="R21C1R0C1R0C3" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-<div id="R21C1R0C1R0C3R0" class="row">
-	<div id="R21C1R0C1R0C3R0C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="queue_group"  [hidden]="!screen_instance['queue_group'].show" >
-			<datatable [comp_id]="'queue_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
-		</div>
-	</div>
-	<div id="R21C1R0C1R0C3R0C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="message_type_group"  [hidden]="!screen_instance['message_type_group'].show" >
-			<datatable [comp_id]="'message_type_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
-		</div>
-	</div>
-</div>
-	</div>
 </div>
 	</div>
 	<div id="R21C1R0C2" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
@@ -48,8 +34,8 @@
 		</div>
 	</div>
 	<div id="R21C1R0C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="status_group"  [hidden]="!screen_instance['status_group'].show" >
-			<chart [comp_id]="'status_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
+		<div class="queue_group"  [hidden]="!screen_instance['queue_group'].show" >
+			<chart [comp_id]="'queue_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></chart>
 		</div>
 	</div>
 </div>
