--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fab_review_layout/p_fab_review_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fab_review_layout/p_fab_review_layout.component.html
@@ -10,14 +10,19 @@
 <div id="R31" class="row">
 	<div id="R31C1" class="column col-md-9 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R31C1R0" class="row">
-	<div id="R31C1R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R31C1R0C1" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="reversal_additional_ui" >
 			<f_npss_tran_remarks_ui [comp_id]="'reversal_additional_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('reversal_additional_ui','f_npss_tran_remarks_ui')" profile_name="p_fab_review_layout"></f_npss_tran_remarks_ui >
 		</div>
 	</div>
-	<div id="R31C1R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R31C1R0C2" class="column col-md-7 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="process_log_control_ui" >
 			<f_npss_reversal_plog_ui [comp_id]="'process_log_control_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('process_log_control_ui','f_npss_reversal_plog_ui')" profile_name="p_fab_review_layout"></f_npss_reversal_plog_ui >
+		</div>
+	</div>
+	<div id="R31C1R0C3" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="cbs_accounts"  [hidden]="!screen_instance['cbs_accounts'].show" >
+			<datatable [comp_id]="'cbs_accounts'" [screen_instance]="screen_instance" profile_name="p_fab_review_layout"></datatable>
 		</div>
 	</div>
 </div>
@@ -35,8 +40,6 @@
 		<div class="process_log_list"  [hidden]="!screen_instance['process_log_list'].show" >
 			<datatable [comp_id]="'process_log_list'" [screen_instance]="screen_instance" profile_name="p_fab_review_layout"></datatable>
 		</div>
-	</div>
-	<div id="R31C1R0C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 	</div>
 	<div id="R31C1R0C3" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="reversal_action_ui" >
