6746 - New table-NPSS Exceptions

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_exceptions/p_view_main_req_and_res_layout/p_view_main_req_and_res_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_exceptions/p_view_main_req_and_res_layout/p_view_main_req_and_res_layout.component.html
@@ -10,12 +10,12 @@
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="request_ui" >
-			<f_npss_exceptional_req_ui [comp_id]="'request_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('request_ui','f_npss_exceptional_req_ui')" profile_name="p_view_main_req_and_res_layout"></f_npss_exceptional_req_ui >
+			<f_npss_excep_request_ui [comp_id]="'request_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('request_ui','f_npss_excep_request_ui')" profile_name="p_view_main_req_and_res_layout"></f_npss_excep_request_ui >
 		</div>
 	</div>
 	<div id="R21C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="response_ui" >
-			<f_npss_exceptional_res_ui [comp_id]="'response_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('response_ui','f_npss_exceptional_res_ui')" profile_name="p_view_main_req_and_res_layout"></f_npss_exceptional_res_ui >
+			<f_npss_excep_response_ui [comp_id]="'response_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('response_ui','f_npss_excep_response_ui')" profile_name="p_view_main_req_and_res_layout"></f_npss_excep_response_ui >
 		</div>
 	</div>
 </div>
