--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_exceptions/p_view_error_log_layout/p_view_error_log_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_exceptions/p_view_error_log_layout/p_view_error_log_layout.component.html
@@ -10,7 +10,7 @@
 <div id="R21" class="row">
 	<div id="R21C1" class="column col-md-10 col-sm-6 col-xs-6 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" >
 		<div class="error_log" >
-			<f_npss_exceptional_error_dataui [comp_id]="'error_log'" [screen_instance]="screen_instance" [hidden]="isHidden('error_log','f_npss_exceptional_error_dataui')" profile_name="p_view_error_log_layout"></f_npss_exceptional_error_dataui >
+			<f_npss_excep_error_ui [comp_id]="'error_log'" [screen_instance]="screen_instance" [hidden]="isHidden('error_log','f_npss_excep_error_ui')" profile_name="p_view_error_log_layout"></f_npss_excep_error_ui >
 		</div>
 	</div>
 </div>
