--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/f_npss_reversal_srch/f_npss_reversal_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/f_npss_reversal_srch/f_npss_reversal_srch.component.html
@@ -20,7 +20,7 @@
 </div>
 <div id="RN21" class="row">
 	<div  id="RN11CN7" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
-				<cdn_ctrl [ctrl_id]="'npss_reversal_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+				<cdn_cur_ctrl [ctrl_id]="'npss_reversal_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
 	<div  id="RN21CN5" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('reversal_amount')" >
 				<cdn_ctrl [ctrl_id]="'npss_reversal_srch_reversal_amount'" [comp_id]="comp_id" [ctrl]="ctrl.reversal_amount" [model]="screen_instance[this.comp_id].f_npss_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
