--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_ip_transaction_by_messages/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_ip_transaction_by_messages/p_main_layout/p_main_layout.component.html
@@ -13,8 +13,8 @@
 	<div id="R21C1R0C1R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 <div id="R21C1R0C1R0C2R0" class="row">
 	<div id="R21C1R0C1R0C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="payment_type_group"  [hidden]="!screen_instance['payment_type_group'].show" >
-			<datatable [comp_id]="'payment_type_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
+		<div class="process_group"  [hidden]="!screen_instance['process_group'].show" >
+			<datatable [comp_id]="'process_group'" [screen_instance]="screen_instance" profile_name="p_main_layout"></datatable>
 		</div>
 	</div>
 </div>
