--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/p_initate_layout/p_initate_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/p_initate_layout/p_initate_layout.component.html
@@ -7,5 +7,12 @@
 		</div>
 	</div>
 </div>
+<div id="R21" class="row">
+	<div id="R21C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="initiate_custom_widget"  [hidden]="!screen_instance['initiate_custom_widget'].show" >
+			<npss_cs_reversal_initiate [comp_id]="'initiate_custom_widget'" [screen_instance]="screen_instance" profile_name="p_initate_layout"></npss_cs_reversal_initiate>
+		</div>
+	</div>
+</div>
 
 </div>
