--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/f_npss_liq_pos__srch/f_npss_liq_pos__srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/f_npss_liq_pos__srch/f_npss_liq_pos__srch.component.html
@@ -7,12 +7,12 @@
 				<txt [ctrl_id]="'npss_liq_pos__srch_currency'" [comp_id]="comp_id" [ctrl]="ctrl.currency" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 	<div  id="RN01CN1001" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('accountholderbic')" >
-				<txt [ctrl_id]="'npss_liq_pos__srch_accountholderbic'" [comp_id]="comp_id" [ctrl]="ctrl.accountholderbic" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cdn_ctrl [ctrl_id]="'npss_liq_pos__srch_accountholderbic'" [comp_id]="comp_id" [ctrl]="ctrl.accountholderbic" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 <div id="RN11" class="row">
 	<div  id="RN11CN2" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('accountnumber')" >
-				<txt [ctrl_id]="'npss_liq_pos__srch_accountnumber'" [comp_id]="comp_id" [ctrl]="ctrl.accountnumber" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
+				<cdn_ctrl [ctrl_id]="'npss_liq_pos__srch_accountnumber'" [comp_id]="comp_id" [ctrl]="ctrl.accountnumber" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 	<div  id="RN11CN3" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('datetime')" >
 				<dtp [ctrl_id]="'npss_liq_pos__srch_datetime'" [comp_id]="comp_id" [ctrl]="ctrl.datetime" [model]="screen_instance[this.comp_id].f_npss_liq_pos__srch.model" [screen_instance]="screen_instance" [form_instance]="this"></dtp>
