--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/p_main_layout/p_main_layout.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/p_main_layout/p_main_layout.component.css
@@ -1,3 +1,3 @@
 /* CSS */
 :host ::ng-deep .search .row.dynamic_action_btn .btn { float: right; }
-:host ::ng-deep .api_input_ui .row.dynamic_action_btn .btn { float: right; }
+:host ::ng-deep .api_input_ui_actions .row.dynamic_action_btn .btn { float: right; }
