--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/p_main_layout/p_main_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_liquidity_position/p_main_layout/p_main_layout.component.html
@@ -9,9 +9,18 @@
 		</div>
 	</div>
 	<div id="R11C1R0C2" class="column col-md-7 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+<div id="R11C1R0C2R0" class="row">
+	<div id="R11C1R0C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="api_input_ui" >
 			<f_npss_liq_pos_ui [comp_id]="'api_input_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('api_input_ui','f_npss_liq_pos_ui')" profile_name="p_main_layout"></f_npss_liq_pos_ui >
 		</div>
+	</div>
+	<div id="R11C1R0C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="api_input_ui_actions" >
+			<f_api_input_ui_actions [comp_id]="'api_input_ui_actions'" [screen_instance]="screen_instance" [hidden]="isHidden('api_input_ui_actions','f_api_input_ui_actions')" profile_name="p_main_layout"></f_api_input_ui_actions >
+		</div>
+	</div>
+</div>
 	</div>
 </div>
 	</div>
