7115 - ide and app changes

--- a/frontend/wp_ng9/custom_widget/npss_cs_rev_get_usable_balance/npss_cs_rev_get_usable_balance.component.html
+++ b/frontend/wp_ng9/custom_widget/npss_cs_rev_get_usable_balance/npss_cs_rev_get_usable_balance.component.html
@@ -52,7 +52,7 @@
     
     <div class="row custom-row">
         <div class="col-md-5">
-            <label>Raccountbalance</label>
+            <label>Real Account Usable Balance</label>
         </div>
         <div class="col-md-5 bank-textbox custom-md-textbox">
             <input type="text" id="mdShadBal"  name="mdShadBal" [(ngModel)]="raccountbalance" [disabled]="pracctbalance"> <!-- [(ngModel)]="mdShadBal" name="mdShadBal" #mdShadBal="ngModel" [disabled]="mdShadBal">-->
