--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_ip_transactions/f_npss_ip_transaction_details_srch/f_npss_ip_transaction_details_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_all_ip_transactions/f_npss_ip_transaction_details_srch/f_npss_ip_transaction_details_srch.component.html
@@ -34,7 +34,7 @@
 				<txt [ctrl_id]="'npss_ip_transaction_details_srch_payment_endtoend_id'" [comp_id]="comp_id" [ctrl]="ctrl.payment_endtoend_id" [model]="screen_instance[this.comp_id].f_npss_ip_transaction_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
 </div>
-<div id="RN51" class="row">
+<div id="r4" class="row">
 	<div  id="RN51CN12" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
 				<cdn_cur_ctrl [ctrl_id]="'npss_ip_transaction_details_srch_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_ip_transaction_details_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
