--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
@@ -8,5 +8,8 @@
 
 <p-dialog header="{{'Search' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_search_layout__spap_from_nav_search_showpopup" [contentStyle]="{'overflow-y': 'auto','height': '400px','width': '400px'}" [draggable]="true" [modal]="true">
 	<p_search_layout [screen_instance]="this" ></p_search_layout></p-dialog>
+
+<p-dialog header="{{'' | translate }}"  [closable]="true" (onHide)="closePopup()" responsive="true" breakpoint=600 styleClass="show-popup " [(visible)]="p_outward_chart_layout__e_1678959818806_showpopup" [contentStyle]="{'overflow-y': 'auto','width': 'auto'}" [draggable]="true" [modal]="true">
+	<p_outward_chart_layout [screen_instance]="this" ></p_outward_chart_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 </div>
