--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/f_navigation/f_navigation.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/f_navigation/f_navigation.component.html
@@ -1,7 +1,7 @@
 <div class="">
 	
 	<div class="row dynamic_action_btn">
-		<btn [ctrl_id]="'navigation_search'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_search" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_search.show"></btn>
+		<btn [ctrl_id]="'navigation_searches'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_searches" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_searches.show"></btn>
 		<btn [ctrl_id]="'navigation_trg_btn'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_trg_btn" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_trg_btn.show"></btn>
 		<btn [ctrl_id]="'navigation_view_tran'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_tran" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_tran.show"></btn>
 		<btn [ctrl_id]="'navigation_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_process_log.show"></btn>
