--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
@@ -1,7 +1,17 @@
 <div class="p_default_profile">
  <!-- PROFILE HTML - p_default_profile --> 
 <div id="R21" class="row">
-	<div id="R21C1" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-4 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C2" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="home_label"  [hidden]="!screen_instance['home_label'].show" >
+			<app-label [comp_id]="'home_label'" [screen_instance]="screen_instance" profile_name="p_default_profile"></app-label>
+		</div>
+	</div>
+	<div id="R21C3" class="column col-md-3 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="date_header" >
+			<f_npss_home_dashboard_header_srch [comp_id]="'date_header'" [screen_instance]="screen_instance" [hidden]="isHidden('date_header','f_npss_home_dashboard_header_srch')" profile_name="p_default_profile"></f_npss_home_dashboard_header_srch >
+		</div>
+	</div>
+	<div id="R21C1" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="navigation" >
 			<f_navigation [comp_id]="'navigation'" [screen_instance]="screen_instance" [hidden]="isHidden('navigation','f_navigation')" profile_name="p_default_profile"></f_navigation >
 		</div>
