--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.css
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.css
@@ -1,2 +1,2 @@
 /* CSS */
-:host ::ng-deep .navigation .row.dynamic_action_btn .btn { float: right; }
+:host ::ng-deep .nav_ui .row.dynamic_action_btn .btn { float: right; }
