--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
@@ -2,8 +2,8 @@
  <!-- PROFILE HTML - p_default_profile --> 
 <div id="R21" class="row">
 	<div id="R21C4" class="column col-md-8 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
-		<div class="date_widget"  [hidden]="!screen_instance['date_widget'].show" >
-			<torus_cs_show_hide [comp_id]="'date_widget'" [screen_instance]="screen_instance" profile_name="p_default_profile"></torus_cs_show_hide>
+		<div class="home_dashboard_title"  [hidden]="!screen_instance['home_dashboard_title'].show" >
+			<torus_cs_show_hide [comp_id]="'home_dashboard_title'" [screen_instance]="screen_instance" profile_name="p_default_profile"></torus_cs_show_hide>
 		</div>
 	</div>
 	<div id="R21C1" class="column col-md-4 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
