--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/f_navigation/f_navigation.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/f_navigation/f_navigation.component.html
@@ -4,6 +4,7 @@
 		<btn [ctrl_id]="'navigation_view_tran'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_tran" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_tran.show"></btn>
 		<btn [ctrl_id]="'navigation_view_process_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_process_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_process_log.show"></btn>
 		<btn [ctrl_id]="'navigation_view_message_log'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_message_log" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_message_log.show"></btn>
+		<btn [ctrl_id]="'navigation_back'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_back" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_back.show"></btn>
  	</div>
 
 </div>
