--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/s_home_dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="s_home_dashboard">
+<p_ip_pending_layout [screen_instance]="this" [hidden]="!(current_profile=='p_ip_pending_layout')"></p_ip_pending_layout>
 <p_op_layout [screen_instance]="this" [hidden]="!(current_profile=='p_op_layout')"></p_op_layout>
 <p_ip_queue_layout [screen_instance]="this" [hidden]="!(current_profile=='p_ip_queue_layout')"></p_ip_queue_layout>
 <p_view_history_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_history_layout')"></p_view_history_layout>
