--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
@@ -1,7 +1,12 @@
 <div class="p_default_profile">
  <!-- PROFILE HTML - p_default_profile --> 
 <div id="R21" class="row">
-	<div id="R21C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C5" class="column col-md-9 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="home_dashboard_title"  [hidden]="!screen_instance['home_dashboard_title'].show" >
+			<npss_cs_dashboard_title [comp_id]="'home_dashboard_title'" [screen_instance]="screen_instance" profile_name="p_default_profile"></npss_cs_dashboard_title>
+		</div>
+	</div>
+	<div id="R21C1" class="column col-md-3 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="nav_ui" >
 			<f_nav_ui [comp_id]="'nav_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('nav_ui','f_nav_ui')" profile_name="p_default_profile"></f_nav_ui >
 		</div>
