7249 - Remark list changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/s_rct_reversal_non_aed.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/s_rct_reversal_non_aed.component.html
@@ -25,6 +25,6 @@
 	<p_search_layout [screen_instance]="this" ></p_search_layout></p-dialog>
 <app-dialog [screen_instance]="this" ></app-dialog>
 <div style="display:none">
-	<datatable [comp_id]="'comment_list'" [screen_instance]="this"></datatable>
+	<datatable [comp_id]="'reversal_list'" [screen_instance]="this"></datatable>
 </div>
 </div>
