--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fab_reversal_new_layout/p_fab_reversal_new_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/p_fab_reversal_new_layout/p_fab_reversal_new_layout.component.html
@@ -34,7 +34,12 @@
 			<datatable [comp_id]="'cbs_accounts'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_new_layout"></datatable>
 		</div>
 	</div>
-	<div id="R21C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+	<div id="R21C2R0C2" class="column col-md-5 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="remark_list"  [hidden]="!screen_instance['remark_list'].show" >
+			<datatable [comp_id]="'remark_list'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_new_layout"></datatable>
+		</div>
+	</div>
+	<div id="R21C2R0C3" class="column col-md-7 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="get_usable_balance_widget"  [hidden]="!screen_instance['get_usable_balance_widget'].show" >
 			<npss_cs_rev_get_usable_balance [comp_id]="'get_usable_balance_widget'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_new_layout"></npss_cs_rev_get_usable_balance>
 		</div>
