--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/p_fab_reversal_non_aed_n_layout/p_fab_reversal_non_aed_n_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal_non_aed/p_fab_reversal_non_aed_n_layout/p_fab_reversal_non_aed_n_layout.component.html
@@ -2,14 +2,27 @@
  <!-- PROFILE HTML - p_fab_reversal_non_aed_n_layout --> 
 <div id="R11" class="row">
 	<div id="R11C1" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+<div id="R11C1R0" class="row">
+	<div id="R11C1R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="original_transaction_details"  [hidden]="!screen_instance['original_transaction_details'].show" >
 			<datatable [comp_id]="'original_transaction_details'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_non_aed_n_layout"></datatable>
 		</div>
 	</div>
+</div>
+	</div>
 	<div id="R11C2" class="column col-md-6 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+<div id="R11C2R0" class="row">
+	<div id="R11C2R0C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="refund_processing_details"  [hidden]="!screen_instance['refund_processing_details'].show" >
 			<datatable [comp_id]="'refund_processing_details'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_non_aed_n_layout"></datatable>
 		</div>
+	</div>
+	<div id="R11C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="remarks_list"  [hidden]="!screen_instance['remarks_list'].show" >
+			<datatable [comp_id]="'remarks_list'" [screen_instance]="screen_instance" profile_name="p_fab_reversal_non_aed_n_layout"></datatable>
+		</div>
+	</div>
+</div>
 	</div>
 </div>
 <div id="R21" class="row">
