--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_master_dashboard/f_npss_master_dashboard_srch/f_npss_master_dashboard_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_master_dashboard/f_npss_master_dashboard_srch/f_npss_master_dashboard_srch.component.html
@@ -6,8 +6,8 @@
 	<div #npss_master_dashboard_srch_memory63 id="RN01CN1" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory63')" >
 				<dtp [ctrl_id]="'npss_master_dashboard_srch_memory63'" [comp_id]="comp_id" [ctrl]="ctrl.memory63" [model]="screen_instance[this.comp_id].f_npss_master_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></dtp>
 	</div>
-	<div  id="RN01CN2" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory124')" >
-				<cbo [ctrl_id]="'npss_master_dashboard_srch_memory124'" [comp_id]="comp_id" [ctrl]="ctrl.memory124" [model]="screen_instance[this.comp_id].f_npss_master_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
+	<div  id="RN01CN2" class="column col-md-10 col-sm-12 col-xs-12 col-md-offset-1 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('process_group')" >
+				<cbo [ctrl_id]="'npss_master_dashboard_srch_process_group'" [comp_id]="comp_id" [ctrl]="ctrl.process_group" [model]="screen_instance[this.comp_id].f_npss_master_dashboard_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
 	</div>
 </div>
 	</form>
