7332 - repost ide code changes

--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_initiation/f_npss_manual_initiation_srch/f_npss_manual_initiation_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_initiation/f_npss_manual_initiation_srch/f_npss_manual_initiation_srch.component.html
@@ -22,9 +22,14 @@
 				<cdn_ctrl [ctrl_id]="'npss_manual_initiation_srch_uetr'" [comp_id]="comp_id" [ctrl]="ctrl.uetr" [model]="screen_instance[this.comp_id].f_npss_manual_initiation_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
-<div id="RN51" class="row">
+<div id="r4" class="row">
 	<div  id="RN11CN4" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('payment_endtoend_id')" >
 				<cdn_ctrl [ctrl_id]="'npss_manual_initiation_srch_payment_endtoend_id'" [comp_id]="comp_id" [ctrl]="ctrl.payment_endtoend_id" [model]="screen_instance[this.comp_id].f_npss_manual_initiation_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
+	</div>
+</div>
+<div id="RN51" class="row">
+	<div  id="RN51CN6" class="column col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('clrsysref')" >
+				<cdn_ctrl [ctrl_id]="'npss_manual_initiation_srch_clrsysref'" [comp_id]="comp_id" [ctrl]="ctrl.clrsysref" [model]="screen_instance[this.comp_id].f_npss_manual_initiation_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 	</form>
