--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_srch/f_npss_op_reversal_srch.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_op_rct_reversal/f_npss_op_reversal_srch/f_npss_op_reversal_srch.component.html
@@ -13,7 +13,7 @@
 				<cdn_date [ctrl_id]="'npss_op_reversal_srch_memory98'" [comp_id]="comp_id" [ctrl]="ctrl.memory98" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_date>
 	</div>
 </div>
-<div id="RN51" class="row">
+<div id="r1" class="row">
 	<div  id="RN21CN13" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory92')" >
 				<cdn_cur_ctrl [ctrl_id]="'npss_op_reversal_srch_memory92'" [comp_id]="comp_id" [ctrl]="ctrl.memory92" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_cur_ctrl>
 	</div>
@@ -43,6 +43,11 @@
 	</div>
 	<div  id="RN11CN10" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory75')" >
 				<cbo [ctrl_id]="'npss_op_reversal_srch_memory75'" [comp_id]="comp_id" [ctrl]="ctrl.memory75" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cbo>
+	</div>
+</div>
+<div id="RN51" class="row">
+	<div  id="RN51CN12" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('memory101')" >
+				<cdn_ctrl [ctrl_id]="'npss_op_reversal_srch_memory101'" [comp_id]="comp_id" [ctrl]="ctrl.memory101" [model]="screen_instance[this.comp_id].f_npss_op_reversal_srch.model" [screen_instance]="screen_instance" [form_instance]="this"></cdn_ctrl>
 	</div>
 </div>
 	</form>
