--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/s_view_merchant_details.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/s_view_merchant_details.component.html
@@ -1,4 +1,5 @@
 <div class="s_view_merchant_details">
+<p_qr_layout [screen_instance]="this" [hidden]="!(current_profile=='p_qr_layout')"></p_qr_layout>
 <p_cash_desk_layout [screen_instance]="this" [hidden]="!(current_profile=='p_cash_desk_layout')"></p_cash_desk_layout>
 <p_view_shop_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_shop_layout')"></p_view_shop_layout>
 <p_view_account_layout [screen_instance]="this" [hidden]="!(current_profile=='p_view_account_layout')"></p_view_account_layout>
