--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_navigation/f_navigation.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_navigation/f_navigation.component.html
@@ -7,6 +7,8 @@
 		<btn [ctrl_id]="'navigation_view_shop_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_shop_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_shop_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_view_cash_desk_detail'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_view_cash_desk_detail" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_view_cash_desk_detail.show"></btn>
 		<btn [ctrl_id]="'navigation_process_log_trg'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_process_log_trg" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_process_log_trg.show"></btn>
+		<btn [ctrl_id]="'navigation_generate_merchant_tag'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_generate_merchant_tag" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_generate_merchant_tag.show"></btn>
+		<btn [ctrl_id]="'navigation_generate_qr'" [comp_id]="comp_id" [ctrl]="screen_instance.navigation_generate_qr" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.navigation_generate_qr.show"></btn>
  	</div>
 
 </div>
