--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_npss_merchant_payment_type_qr_ui/f_npss_merchant_payment_type_qr_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_view_merchant_details/f_npss_merchant_payment_type_qr_ui/f_npss_merchant_payment_type_qr_ui.component.html
@@ -30,6 +30,8 @@
 	<div  id="RN31CN8" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('remarks')" >
 				<txt [ctrl_id]="'npss_merchant_payment_type_qr_ui_remarks'" [comp_id]="comp_id" [ctrl]="ctrl.remarks" [model]="screen_instance[this.comp_id].f_npss_merchant_payment_type_qr_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></txt>
 	</div>
+</div>
+<div id="RN41" class="row">
 	<div  id="RN31CN7" class="column col-md-6 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" [hidden]="isControlHidden('intrbk_sttlm_amnt')" >
 				<cur [ctrl_id]="'npss_merchant_payment_type_qr_ui_intrbk_sttlm_amnt'" [comp_id]="comp_id" [ctrl]="ctrl.intrbk_sttlm_amnt" [model]="screen_instance[this.comp_id].f_npss_merchant_payment_type_qr_ui.model" [screen_instance]="screen_instance" [form_instance]="this"></cur>
 	</div>
