--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/p_fin_initate_layout/p_fin_initate_layout.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_manual_verification/p_fin_initate_layout/p_fin_initate_layout.component.html
@@ -14,6 +14,11 @@
 		</div>
 	</div>
 	<div id="R11C2R0C2" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="verification_ui" >
+			<f_npss_manual_verification_ui [comp_id]="'verification_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('verification_ui','f_npss_manual_verification_ui')" profile_name="p_fin_initate_layout"></f_npss_manual_verification_ui >
+		</div>
+	</div>
+	<div id="R11C2R0C3" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="payment_processing_details_ui" >
 			<f_payment_processing_details_ui [comp_id]="'payment_processing_details_ui'" [screen_instance]="screen_instance" [hidden]="isHidden('payment_processing_details_ui','f_payment_processing_details_ui')" profile_name="p_fin_initate_layout"></f_payment_processing_details_ui >
 		</div>
