--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/f_npss_remarks_ui/f_npss_remarks_ui.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_rct_reversal/f_npss_remarks_ui/f_npss_remarks_ui.component.html
@@ -10,7 +10,7 @@
 	</form>
 </fieldset >
 	<div class="row dynamic_action_btn">
-		<btn [ctrl_id]="'cancel_return_ui_save'" [comp_id]="comp_id" [ctrl]="screen_instance.cancel_return_ui_save" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cancel_return_ui_save.show"></btn>
+		<btn [ctrl_id]="'cancel_return_ui_return_to_maker'" [comp_id]="comp_id" [ctrl]="screen_instance.cancel_return_ui_return_to_maker" [screen_instance]="screen_instance" [form_instance]="this" [hidden]="!screen_instance.cancel_return_ui_return_to_maker.show"></btn>
  	</div>
 
 </div>
