--- a/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
+++ b/frontend/wp_ng9/meta_data/app_npss_edge/s_home_dashboard/p_default_profile/p_default_profile.component.html
@@ -19,6 +19,13 @@
 		</div>
 	</div>
 </div>
+<div id="R41" class="row">
+	<div id="R41C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
+		<div class="outward_overlay_failures_list"  [hidden]="!screen_instance['outward_overlay_failures_list'].show" >
+			<datatable [comp_id]="'outward_overlay_failures_list'" [screen_instance]="screen_instance" profile_name="p_default_profile"></datatable>
+		</div>
+	</div>
+</div>
 <div id="R31" class="row">
 	<div id="R31C1" class="column col-md-12 col-sm-6 col-xs-6 col-md-offset-0 col-sm-offset-0 col-xs-offset-0" >
 		<div class="inward_list"  [hidden]="!screen_instance['inward_list'].show" >
